# seolinkr

./: .env.example  .gitignore  11_Best_Sports_Bra_Workout.md  11_Best_Sports_Bra_Workout_linked.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.claude/commands/: audit-batch.md  gsc-report.md  link-article.md  link-batch.md
.streamlit/: config.toml  secrets.toml.example
api/: deps.py  main.py
api/routes/: audit.py  batch.py  candidates.py  config.py  gsc.py  link_map.py  pipeline.py  plp.py  sitemap.py  xlsx_utils.py
src/seo_linker/: __init__.py  batch.py  cli.py  config.py  link_map_pipeline.py  models.py  pipeline.py  plp_pipeline.py
src/seo_linker/audit/: __init__.py  checker.py
src/seo_linker/gsc/: __init__.py  auth.py  cache.py  client.py  cross_linker.py  opportunities.py
src/seo_linker/html/: generator.py
src/seo_linker/linking/: claude_linker.py  plp_linker.py  plp_prompt_builder.py  prompt_builder.py
src/seo_linker/matching/: embeddings.py  prefilter.py
src/seo_linker/parsers/: base.py  detector.py  docx_parser.py  markdown_parser.py  plp_xlsx_parser.py  xlsx_parser.py
src/seo_linker/rewriting/: __init__.py  claude_rewriter.py  rewrite_prompt_builder.py
src/seo_linker/sitemap/: enricher.py  fetcher.py
src/seo_linker/writers/: base.py  docx_writer.py  markdown_writer.py  pagedesigner.py  xlsx_writer.py
tests/: test_audit_checker.py  test_batch.py  test_cli_json_output.py  test_gsc_cache.py  test_gsc_cross_linker.py  test_gsc_opportunities.py  test_models.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: application-shell1.tsx  audit-results.tsx  batch-audit-summary.tsx  batch-file-uploader.tsx  batch-progress.tsx  batch-summary.tsx  (+7 more)
(+20 files in other folders)
